# perapp-rs

./: .gitignore  Cargo.toml  README.md  build.rs  edit_name.sh  make.sh
module/: config.toml  config.txt  customize.sh  service.sh
script/: build.sh  fix.sh  format.sh
src/: config.rs  main.rs  mode.rs  powercfg.rs  topapp.rs
src/config/: data.rs  mod.rs
update/: changelog(template).md
