[package]
name = "template_nha9nday6c"
version = "0.1.0"
edition = "2021"
authors = ["template"]
description = "template"
license = "WTFPL"
readme = "README.md"
repository = "https://github.com/shadow3aaa/magisk-module-template-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
serde = "1.0.171"
serde_derive = "1.0.171"
toml = "0.7.6"
