[package]
name = "perapp-rs"
version = "0.1.2"
edition = "2021"
authors = ["shadow3"]
description = "分app模式写入器, 按照powercfg描述, 对app进行不同的操作"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/shadow3aaa/perapp-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
inotify = { version = "0.10.2", default-features = false }
libc = "0.2.150"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.7.6"

[build-dependencies]
serde = "1.0.171"
serde_derive = "1.0.171"
toml = "0.7.6"

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
panic = "abort"
